tests/negative_tests/semantic_errors/arithmetic_on_bool.c
// INVALID - Type Error: arithmetic requires numeric types
int main() {
    bool x;
    bool y;
    int result;
    x = true;
    y = false;
    result = x + y;  // ERROR: cannot add booleans
    return result;
}
